--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "debounce": "^1.2.0",
     "timeago.js": "^4.0.2",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
+    "vue-progressive-image": "^3.2.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
