--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "timeago.js": "^4.0.2",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
+    "vue-loading-skeleton": "^1.1.9",
     "vue-markdown": "^2.2.4",
     "vue-progressive-image": "^3.2.0",
     "vue-router": "^3.2.0",
