--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-runtime": "^6.26.0",
-    "core-js": "^3.6.5",
     "debounce": "^1.2.0",
+    "string.prototype.replaceall": "^1.0.3",
     "timeago.js": "^4.0.2",
     "vue": "^2.6.11",
-    "vue-lazyload": "^1.3.3",
     "vue-loading-skeleton": "^1.1.9",
     "vue-markdown": "^2.2.4",
     "vue-progressive-image": "^3.2.0",
-    "vue-router": "^3.2.0",
-    "vue-simple-markdown": "^1.1.4"
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
