fix: Whitelisted <p> from purgeCSS, reduce dependency size
Replaced vue-markdown with marked and DOMpurify to save on size

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.19.2",
     "babel-runtime": "^6.26.0",
     "debounce": "^1.2.0",
+    "dompurify": "^2.0.12",
+    "marked": "^1.1.1",
     "string.prototype.replaceall": "^1.0.3",
     "timeago.js": "^4.0.2",
     "vue": "^2.6.11",
     "vue-loading-skeleton": "^1.1.9",
-    "vue-markdown": "^2.2.4",
     "vue-progressive-image": "^3.2.0",
     "vue-router": "^3.2.0"
   },
